words/part/KWView.cpp
@@ -1494,7 +1494,15 @@ void KWView::setCurrentPage(const KWPage &currentPage)
     if (currentPage != m_currentPage) {
         m_currentPage = currentPage;
         m_canvas->resourceManager()->setResource(KoCanvasResource::CurrentPage, m_currentPage.pageNumber());
-        m_zoomController->setPageSize(m_currentPage.rect().size());
+
+        QSizeF newPageSize = m_currentPage.rect().size();
+        QSizeF newMaxPageSize = QSize(qMax(m_maxPageSize.width(), newPageSize.width()),
+                                     qMax(m_maxPageSize.height(), newPageSize.height()));
+        if (newMaxPageSize != m_maxPageSize) {
+            m_maxPageSize = newMaxPageSize;
+            m_zoomController->setPageSize(m_maxPageSize);
+        }
+
         m_actionViewHeader->setChecked(m_currentPage.pageStyle().headerPolicy() != KWord::HFTypeNone);
         m_actionViewFooter->setChecked(m_currentPage.pageStyle().footerPolicy() != KWord::HFTypeNone);
     }
